Closed Bug 16267 Opened 25 years ago Closed 25 years ago

Can't paste copied text into certain applications

Categories

(SeaMonkey :: UI Design, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: r_rom, Assigned: mikepinkerton)

References

Details

Attachments

(1 file)

Build #: 10/12/99 Steps to reproduce: 1. select a URL in the URL bar and press CTRL+c; 2. paste in another application. Results: In another Mozilla window, MS Word, and Wordpad: pasted fine In Notepad, cmd, IE, or Run text field in the Start menu: not pasted at all; In NN 4.7, Servant Salamander (a file manager), Ultraedit: pasted fine except for the last character.
Assignee: don → akkana
Component: Browser-General → XPApps
QA Contact: leger → elig
Summary: Problems copying URL's in the URL bar → Can't paste copied text into certain applications
Good catch. Confirmed on same build. Reassigning to Akkana to assign to whoever is doing Win32 clipboard now.
Eli--is Windows the only platform that is having this problem? What about the different apps on Macintosh?
Assignee: akkana → pinkerton
Pinkerton owns the Windows clipboard now.
I've seen no evidence that this is a problem on the Macintosh; since the applications in question don't exist on the Mac (other than NC 4.7, on which it works), there's no easy way to confirm.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → WORKSFORME
Text copied from URL bar using today's opt bits on Win98 now pastes fine in Notepad, IE, Run, 4.7, Mozilla. Resolving as worksforme, please reopen if you're still seeing a problem
Status: RESOLVED → REOPENED
This bug does not occurs on Win98, but still occurs on WinNT. Reopening.
Hardware: HP → PC
Resolution: WORKSFORME → ---
Clearing WORKSFORME resolution due to reopen of this bug.
Status: REOPENED → ASSIGNED
i'll look at the patch today. thanks! actually, a quick description of the patch would be helpful to give me some context, i can't really tell just by looking quickly at the diff what was broken and what the fix is.
Description of the patch: 1. (nsDataObj.cpp) CF_TEXT and CF_UNICODETEXT clipboard formats need a null terminator, but it is not added on WinNT (because GlobalAlloc() do not round up allocation length on WinNT). As a result, the last character is ignored when paste in the NN4.7. 2. (nsXIFFormatConverter.cpp) IE and Notepad (on WinNT) request the CF_UNICODETEXT clipboard format, but the converter does not support the kUnicodeMime flavor. As a result, request for paste fails. Do you understand? (My English is poor, sorry...)
understood. i'm actually removing the optimization that deals with assuming there will be rounding. so we waste a few extra bytes on win98. big deal, it makes the code much easier to follow. thanks for the summary!
Status: ASSIGNED → RESOLVED
Closed: 25 years ago25 years ago
Resolution: --- → FIXED
fixes checked in. thanks a lot!
*** Bug 17194 has been marked as a duplicate of this bug. ***
Status: RESOLVED → VERIFIED
Verified fixed using 1999102808 build.
Product: Core → Mozilla Application Suite
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: