Cleaned up the code and fixed a bug where data was not being null terminated on winNT. partial fix for bug #16267 (r=hyatt/pav).